sw/source/filter/ww8/wrtw8esh.cxx
@@ -1154,7 +1154,7 @@ void MSWord_SdrAttrIter::OutEEField(const SfxPoolItem& rHt)
         const OUString &rStr = pURL->GetRepresentation();
         m_rExport.AttrOutput().RawText( rStr, true, GetNodeCharSet() ); // FIXME kendy: is the 'true' actually correct here?  It was here before, but... ;-)
 
-        m_rExport.AttrOutput().EndURL();
+        m_rExport.AttrOutput().EndURL(false);
         m_rExport.nTxtTyp = nOldTxtTyp;
     }
 }
